<resources>
    <string name="app_name">Love Health</string>
    <string name="home_title_name">健康分类</string>
    <string name="home_bottom_nav_name">首页</string>
    <string name="my_bottom_nav_name">我的</string>
    <string name="tool_bar_menu_action_day">白天模式</string>
    <string name="tool_bar_menu_action_night">夜间模式</string>
    <string name="tool_bar_menu_action_refresh">刷新</string>
    <string name="detail_tool_bar_menu_action_share">分享</string>
    <string name="detail_tool_bar_menu_action_link">原文链接</string>
    <string name="detail_tool_bar_menu_action_details">文章详情</string>
    <string name="about_article">关于文章</string>
    <string name="about_article_copy_button">复制</string>
    <string name="about_article_ensure_button">确定</string>
    <string name="search_hint">请输入关键词</string>
    <string name="search_ensure">搜索</string>
    <string name="search_cancel">取消</string>
    <string name="search_list_item_head_title">搜索记录</string>
    <string name="search_list_item_head_button">删除</string>
    <string name="recognize_button">点击说话</string>
    <string name="list_empty_view_title_no_web">~无法获取数据,请设置一下网络~</string>
    <string name="list_empty_view_title_load">玩命加载中\.\.\.</string>
    <string name="list_empty_view_button_title">设置</string>
</resources>
