<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".main.MainActivity">
    <item
        android:id="@+id/action_share"
        android:icon="@drawable/detail_menu_share_item"
        android:orderInCategory="100"
        android:title="@string/detail_tool_bar_menu_action_share"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_refresh"
        android:icon="@mipmap/ic_launcher"
        android:orderInCategory="100"
        android:title="@string/tool_bar_menu_action_refresh"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_link"
        android:icon="@drawable/detail_menu_link_item"
        android:orderInCategory="100"
        android:title="@string/detail_tool_bar_menu_action_link"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_details"
        android:icon="@mipmap/ic_launcher"
        android:orderInCategory="100"
        android:title="@string/detail_tool_bar_menu_action_details"
        app:showAsAction="never"/>
</menu>